# cs431-project

./: .gitignore  README.md
docs/biped-firmware/general/: biped.md  eclipse.md
docs/biped-firmware/labs/: lab_1.md  lab_2.md  lab_3.md  lab_4.md  lab_5.md  lab_6.md  lab_7.md  lab_8.md  lab_9.md
docs/doxygen/: Doxyfile
scripts/biped-firmware/: doxygen.bash  global.bash  setup.bash
src/biped-firmware/: CMakeLists.txt
src/biped-firmware/actuator/: CMakeLists.txt  actuator.cpp  actuator.h
src/biped-firmware/common/: CMakeLists.txt  global.cpp  global.h  parameter.h  pin.h  type.h
src/biped-firmware/controller/: CMakeLists.txt  controller.cpp  controller.h  open_loop_controller.cpp  open_loop_controller.h  pid_controller.cpp  pid_controller.h
src/biped-firmware/main/: CMakeLists.txt  main.cpp
src/biped-firmware/network/: CMakeLists.txt  udp.cpp  udp.h
src/biped-firmware/planner/: CMakeLists.txt  maneuver_planner.cpp  maneuver_planner.h  planner.h  waypoint_planner.cpp  waypoint_planner.h
src/biped-firmware/platform/: CMakeLists.txt  camera.cpp  camera.h  display.cpp  display.h  encoder.cpp  encoder.h  imu.cpp  imu.h  io_expander.cpp  io_expander.h  neopixel.cpp  neopixel.h  serial.cpp  serial.h  time_of_flight.cpp  time_of_flight.h  timer.cpp  timer.h  wifi.cpp  wifi.h
src/biped-firmware/sensor/: CMakeLists.txt  sensor.cpp  sensor.h
src/biped-firmware/task/: CMakeLists.txt  interrupt.cpp  interrupt.h  task.cpp  task.h
src/biped-firmware/utility/: CMakeLists.txt  low_pass_filter.hpp  math.cpp  math.h  median_filter.hpp  serializer.hpp
